--- a/README.Rmd
+++ b/README.Rmd
@@ -16,9 +16,14 @@ knitr::opts_chunk$set(
 # convertr
 
 <!-- badges: start -->
+
 <!-- badges: end -->
 
-The goal of convertr is to ... keep my brain from rotting while I visit my family from Christmas.
+> ⚠️ Warning
+> 
+> Test warning
+
+description 
 
 ## Installation
 
