--- a/README.Rmd
+++ b/README.Rmd
@@ -44,7 +44,7 @@ The package currently three main functions:
 
 ## Examples
 
-Load `convenr`
+Load `convertr`:
 
 ```{r eval=FALSE}
 library(convertr)
