--- a/README.Rmd
+++ b/README.Rmd
@@ -13,7 +13,7 @@ knitr::opts_chunk$set(
 )
 ```
 
-# `convertr`
+# convertr <a href='https://github.com/martinasladek/convertr'><img src='man/figures/logo.png' align="right" hspace="20"  height="139" /></a>
 
 <!-- badges: start -->
 
